<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingActivity" >

    <TextView
        android:id="@+id/tvSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/etSize"
        android:gravity="fill_horizontal|center"
        android:text="@string/size_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:gravity="center"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etColor"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/tvSize"
        android:layout_below="@+id/tvSize"
        android:gravity="fill_horizontal|center"
        android:text="@string/color_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etSize"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etSize"
        android:ems="10"
        android:gravity="center"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etType"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/tvColor"
        android:layout_below="@+id/tvColor"
        android:gravity="fill_horizontal|center"
        android:text="@string/type_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etColor"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etColor"
        android:ems="10"
        android:gravity="center"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etSite"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvType"
        android:layout_toLeftOf="@+id/etSite"
        android:gravity="fill_horizontal|center"
        android:text="@string/site_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etType"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etType"
        android:ems="10"
        android:gravity="center"
        android:inputType="text" />

    <Button
        android:id="@+id/btSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="onSubmit"
        android:gravity="center_vertical|center_horizontal|fill_horizontal"
        android:text="@string/submit_label" />

</RelativeLayout>
